--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,17 @@ html {
   background-color: black;
   color: #EDEDED; }
 
+/* REVEAL TRY */
+.reveal {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: all 1s ease-out; }
+
+.reveal.active {
+  transform: translateY(0px);
+  opacity: 1; }
+
 /*
 *
 GLITCH TEXT
