--- a/css/style.css
+++ b/css/style.css
@@ -38,10 +38,14 @@ html {
   background-color: black;
   color: #EDEDED; }
 
-/* REVEAL TRY */
+/* 
+*
+    reveal sections on scroll
+*
+*/
 .reveal {
   position: relative;
-  transform: translateY(150px);
+  transform: translateY(50px);
   opacity: 0;
   transition: all 1s ease-out; }
 
