--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -76,11 +76,14 @@ html {
     color: $color-primary-light;
 }
 
-/* REVEAL TRY */
-
+/* 
+*
+    reveal sections on scroll
+*
+*/
 .reveal {
     position: relative;
-    transform: translateY(150px);
+    transform: translateY(50px);
     opacity: 0;
     transition: all 1s ease-out;
 }
