--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -73,16 +73,49 @@ TYPEWRITER
     animation: blink .7s step-end infinite;
 }
 
+/* Section title */
 .section-title {
     font-size: $title-font-size;
     font-weight: 700;
     text-transform: uppercase;
+
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+
+    justify-self: center;
+
+    position: relative;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 5.5rem;
+        left: 5%;
+        width: 90%;
+        height: .5rem;
+        background: $color-primary-dark;
+        z-index: -1;
+    }
 }
 
+.dark-mode > main > .about > .section-title::before,
+.dark-mode > main > .skills > .section-title::before,
+.dark-mode > main > .projects > .section-title::before {
+        // top: 4.25rem;
+        top: 5.5rem;
+        // left: 2rem;
+        left: 0;
+        width: 100%;
+        height: 2rem;
+        background: $color-secondary;
+}
+
+/* Paragraph text */
 .body-text {
     font-size: $paragraph-font-size;
 }
 
+/* Skills name */
 .item-title {
     font-size: $smaller-title-font-size;
     font-family: 'Roboto', monospace;
