add and style project

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -17,6 +17,7 @@ $code-font: monospace;
 
 $home-font-size: 6rem;
 $title-font-size: 4.5rem;
+$medium-title-font-size: 2.4rem;
 $smaller-title-font-size: 1.5rem;
 $paragraph-font-size: 2.25rem;
 
