--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,22 @@ TYPEWRITER
   line-height: 20%;
   letter-spacing: .2rem; }
 
+.project-title {
+  font-size: 2.4rem;
+  font-family: 'Roboto', monospace;
+  text-transform: uppercase;
+  line-height: 20%;
+  letter-spacing: .2rem;
+  position: relative; }
+  .project-title::after {
+    content: "";
+    position: absolute;
+    top: 1.5rem;
+    left: -.1rem;
+    height: 2px;
+    width: 100%;
+    background: #EDEDED; }
+
 .about {
   padding-top: 7rem;
   display: grid;
@@ -361,7 +377,7 @@ TYPEWRITER
   filter: invert(100%); }
 
 .home {
-  padding-top: 7rem;
+  margin-top: -7rem;
   display: grid;
   grid-template-columns: 3rem [main-start] repeat(2, 1fr) [main-end] 3rem; }
   .home__data {
@@ -421,6 +437,36 @@ TYPEWRITER
   grid-template-columns: minmax(1rem, 10rem) 1fr minmax(1rem, 10rem);
   grid-template-rows: 7rem 1fr;
   grid-gap: 5rem; }
+  .projects__container {
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 10% 1fr 10%;
+    grid-row-gap: 7rem; }
+
+.project {
+  grid-column: 2 / 3;
+  background-color: #30475E;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .project__data {
+    align-self: start;
+    padding: 3rem;
+    display: grid;
+    grid-template-rows: repeat(3, max-content);
+    grid-gap: 2rem; }
+  .project__stack {
+    display: flex;
+    justify-content: space-evenly; }
+  .project__image {
+    justify-self: end; }
+    .project__image > img {
+      height: 100%;
+      width: 40rem;
+      object-fit: cover; }
+
+.project:nth-child(2n) {
+  flex-direction: row-reverse; }
 
 .skills {
   padding-top: 7rem;
