--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,5 +1,5 @@
 .home {
-    padding-top: 7rem;
+    margin-top: -7rem;
 
     display: grid;
     grid-template-columns: 3rem [main-start] repeat(2, 1fr) [main-end] 3rem;
