--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -6,4 +6,58 @@
     grid-template-columns: minmax(1rem, 10rem) 1fr minmax(1rem, 10rem);
     grid-template-rows: 7rem 1fr;
     grid-gap: 5rem;
+
+    &__container {
+        grid-column: 2 / 3;
+
+        display: grid;
+        grid-template-columns: 10% 1fr 10%;
+
+        grid-row-gap: 7rem;
+    }
+}
+
+.project {
+    grid-column: 2 / 3;
+    background-color: $color-tertiary;
+
+    // display: grid;
+    // grid-template-columns: repeat(2, 1fr);
+    // grid-gap: 2rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &__data {
+        align-self: start;
+        padding: 3rem;
+
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: space-between;
+
+        display: grid;
+        grid-template-rows: repeat(3, max-content);
+        grid-gap: 2rem;
+    }
+
+    &__stack {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    &__image {
+        justify-self: end;
+
+        & > img {
+            height: 100%;
+            width: 40rem;
+            object-fit: cover;
+        }
+    }
+}
+
+.project:nth-child(2n) {
+    flex-direction: row-reverse;
 }
