--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -8,6 +8,7 @@ $color-secondary: #DA0037;
 $color-secondary-light: #F05454;
 
 $color-tertiary: #30475E;
+$color-tertiary-light: #83aabe;
 
 
 // FONT VARIABLES
