--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -7,6 +7,7 @@
     grid-template-rows: 7rem 1fr;
     grid-gap: 5rem;
 
+    // container for all projects
     &__container {
         grid-column: 2 / 3;
 
@@ -17,6 +18,7 @@
     }
 }
 
+// container for each individual project
 .project {
     grid-column: 2 / 3;
     background-color: $color-tertiary;
@@ -29,9 +31,25 @@
     justify-content: center;
     align-items: center;
 
+    // overflow: hidden;
+
+    position: relative;
+
+    &::before {
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color: $color-secondary;
+        position: absolute;
+        top: 3rem;
+        left: 5rem;
+        z-index: -1;
+    }
+
     &__data {
         align-self: start;
         padding: 3rem;
+        padding-top: 1.8rem;
 
         // display: flex;
         // flex-direction: column;
@@ -39,25 +57,72 @@
 
         display: grid;
         grid-template-rows: repeat(3, max-content);
-        grid-gap: 2rem;
-    }
-
-    &__stack {
-        display: flex;
-        justify-content: space-evenly;
+        grid-gap: 1.3rem;
     }
 
     &__image {
         justify-self: end;
+        margin-bottom: -.4rem; // fixes small padding at bottom of image
 
         & > img {
             height: 100%;
             width: 40rem;
             object-fit: cover;
+
+            transition: all .3s ease;
+
+            &:hover {
+                transform: scale(1.2);
+            }
         }
     }
 }
 
 .project:nth-child(2n) {
     flex-direction: row-reverse;
+}
+
+
+.project-stack {
+    // display: flex;
+    // justify-content: space-evenly;
+    // align-self: start;
+
+    position: relative;
+        
+        &::after {
+            content: "";
+            position: absolute;
+            top: 3rem;
+            left: -.1rem;
+            height: 2.8px;
+            width: 100%;
+            background: $color-primary-light;
+        }
+
+    &__item {
+        font-size: $smaller-title-font-size;
+        padding: .2rem;
+        border: $color-primary-light 2px solid;
+        border-radius: 10%;
+        background-color: $color-tertiary-light;
+        color: $color-tertiary;
+        // border: 2px solid $color-secondary-light;
+        // border-radius: 10%;
+        // color: $color-secondary;
+
+        // transition: all .3s ease;
+
+        // background: 
+        //     linear-gradient($color-primary-light, $color-primary-light) padding-box,
+        //     linear-gradient(to bottom right, $color-tertiary, $color-secondary) border-box;
+        // border-radius: 10%;
+        // border: 2px solid transparent;
+
+        // &:hover,
+        // &:active {
+        //     animation: border-light .75s ease;
+        //     animation-iteration-count: infinite;
+        // }
+    }
 }
