--- a/css/style.css
+++ b/css/style.css
@@ -453,6 +453,7 @@ TYPEWRITER
   display: flex;
   justify-content: center;
   align-items: center;
+  border-top-left-radius: 2.5% 6%;
   position: relative; }
   .project::before {
     content: "";
@@ -462,7 +463,8 @@ TYPEWRITER
     position: absolute;
     top: 3rem;
     left: 5rem;
-    z-index: -1; }
+    z-index: -1;
+    border-bottom-right-radius: 2.5% 6%; }
   .project__data {
     align-self: start;
     padding: 3rem;
@@ -479,10 +481,22 @@ TYPEWRITER
       object-fit: cover;
       transition: all .3s ease; }
       .project__image > img:hover {
-        transform: scale(1.2); }
+        transform: scale(1.15); }
 
 .project:nth-child(2n) {
-  flex-direction: row-reverse; }
+  flex-direction: row-reverse;
+  border-top-right-radius: 2.5% 6%; }
+  .project:nth-child(2n)::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: #DA0037;
+    position: absolute;
+    top: 3rem;
+    left: -5rem;
+    z-index: -1;
+    border-bottom-left-radius: 2.5% 6%;
+    border-bottom-right-radius: 0% 0%; }
 
 .project-stack {
   position: relative; }
@@ -491,7 +505,7 @@ TYPEWRITER
     position: absolute;
     top: 3rem;
     left: -.1rem;
-    height: 2.8px;
+    height: 2px;
     width: 100%;
     background: #EDEDED; }
   .project-stack__item {
