--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -33,8 +33,11 @@
 
     // overflow: hidden;
 
+    border-top-left-radius: 2.5% 6%;
+
     position: relative;
 
+    // rectangle behind container
     &::before {
         content: "";
         width: 100%;
@@ -44,6 +47,8 @@
         top: 3rem;
         left: 5rem;
         z-index: -1;
+
+        border-bottom-right-radius: 2.5% 6%;
     }
 
     &__data {
@@ -72,7 +77,7 @@
             transition: all .3s ease;
 
             &:hover {
-                transform: scale(1.2);
+                transform: scale(1.15);
             }
         }
     }
@@ -80,6 +85,22 @@
 
 .project:nth-child(2n) {
     flex-direction: row-reverse;
+    border-top-right-radius: 2.5% 6%;
+
+    // rectangle behind container
+    &::before {
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color: $color-secondary;
+        position: absolute;
+        top: 3rem;
+        left: -5rem;
+        z-index: -1;
+
+        border-bottom-left-radius: 2.5% 6%;
+        border-bottom-right-radius: 0% 0%;
+    }
 }
 
 
@@ -95,7 +116,7 @@
             position: absolute;
             top: 3rem;
             left: -.1rem;
-            height: 2.8px;
+            height: 2px;
             width: 100%;
             background: $color-primary-light;
         }
