finish styles for dark mode projects

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -8,6 +8,7 @@ $color-secondary: #DA0037;
 $color-secondary-light: #F05454;
 
 $color-tertiary: #30475E;
+$color-tertiary-medium: #3e6977;
 $color-tertiary-light: #83aabe;
 
 
@@ -18,7 +19,7 @@ $code-font: monospace;
 
 $home-font-size: 6rem;
 $title-font-size: 4.5rem;
-$medium-title-font-size: 2.4rem;
+$medium-title-font-size: 2.6rem;
 $smaller-title-font-size: 1.5rem;
 $paragraph-font-size: 2.25rem;
 
