--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ TYPEWRITER
   letter-spacing: .2rem; }
 
 .project-title {
-  font-size: 2.4rem;
+  font-size: 2.6rem;
   font-family: 'Roboto', monospace;
   text-transform: uppercase;
   line-height: 20%;
@@ -159,7 +159,7 @@ TYPEWRITER
   .project-title::after {
     content: "";
     position: absolute;
-    top: 2.4rem;
+    top: 3rem;
     left: -.1rem;
     height: 2px;
     width: 100%;
@@ -167,6 +167,9 @@ TYPEWRITER
   .project-title img {
     display: inline-block;
     height: 2rem; }
+
+.project-text {
+  font-size: 1.5rem; }
 
 .about {
   padding-top: 7rem;
@@ -450,6 +453,8 @@ TYPEWRITER
 .project {
   grid-column: 2 / 3;
   background-color: #30475E;
+  background-image: linear-gradient(to bottom right, #3e6977, #30475E);
+  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -460,6 +465,8 @@ TYPEWRITER
     width: 100%;
     height: 100%;
     background-color: #DA0037;
+    background-image: linear-gradient(to bottom right, #30475E, #DA0037);
+    background-size: cover;
     position: absolute;
     top: 3rem;
     left: 5rem;
@@ -472,6 +479,8 @@ TYPEWRITER
     display: grid;
     grid-template-rows: repeat(3, max-content);
     grid-gap: 1.3rem; }
+    .project__data > p {
+      padding-top: 1rem; }
   .project__image {
     justify-self: end;
     margin-bottom: -.4rem; }
@@ -485,12 +494,15 @@ TYPEWRITER
 
 .project:nth-child(2n) {
   flex-direction: row-reverse;
-  border-top-right-radius: 2.5% 6%; }
+  border-top-right-radius: 2.5% 6%;
+  background-image: linear-gradient(to bottom left, #3e6977, #30475E); }
   .project:nth-child(2n)::before {
     content: "";
     width: 100%;
     height: 100%;
     background-color: #DA0037;
+    background-image: linear-gradient(to bottom left, #30475E, #DA0037);
+    background-size: cover;
     position: absolute;
     top: 3rem;
     left: -5rem;
@@ -499,20 +511,22 @@ TYPEWRITER
     border-bottom-right-radius: 0% 0%; }
 
 .project-stack {
-  position: relative; }
+  position: relative;
+  margin-top: 1.2rem; }
   .project-stack::after {
     content: "";
     position: absolute;
-    top: 3rem;
+    top: 3.6rem;
     left: -.1rem;
     height: 2px;
     width: 100%;
     background: #EDEDED; }
   .project-stack__item {
     font-size: 1.5rem;
-    padding: .2rem;
+    padding: .4rem .8rem;
+    margin-right: .5rem;
     border: #EDEDED 2px solid;
-    border-radius: 10%;
+    border-radius: 1rem;
     background-color: #83aabe;
     color: #30475E; }
 
