--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -137,7 +137,8 @@ TYPEWRITER
     &::after {
         content: "";
         position: absolute;
-        top: 2.4rem;
+        // top: 2.4rem;
+        top: 3rem;
         left: -.1rem;
         height: 2px;
         width: 100%;
@@ -152,5 +153,5 @@ TYPEWRITER
 }
 
 .project-text {
-
+    font-size: $smaller-title-font-size;
 }
