add new header styles

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -41,6 +41,8 @@ html {
     background-color: $color-primary-light;
     color: $color-primary-darkest;
 
+    width: 100%;
+
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr auto;
@@ -49,10 +51,10 @@ html {
                          'footer';
 
     // smoother dark-mode/light-mode transition
-    transition: background-color .3s ease-out;
+    transition: background-color .4s ease-out;
 }
 
-.container > header {
+.container > .header {
     grid-area: header;
     position: sticky;
     top: 0;
@@ -69,7 +71,7 @@ html {
     grid-gap: 3rem;
 }
 
-.container > footer {
+.container > .footer {
     grid-area: footer;
 }
 
@@ -84,14 +86,14 @@ html {
     reveal sections on scroll
 *
 */
-.reveal {
-    position: relative;
-    transform: translateY(50px);
-    opacity: 0;
-    transition: all 1s ease-out;
-}
+// .reveal {
+//     position: relative;
+//     transform: translateY(50px);
+//     opacity: 0;
+//     transition: all 1s ease-out;
+// }
 
-.reveal.active {
-    transform: translateY(0px);
-    opacity: 1;
-}
+// .reveal.active {
+//     transform: translateY(0px);
+//     opacity: 1;
+// }
