--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,11 @@
 @import "base";
-@import "typography";
+// @import "typography";
 
-@import "about";
-@import "animations";
-@import "footer";
+// @import "about";
+// @import "animations";
+// @import "footer";
 @import "header";
-@import "home";
-@import "projects";
-@import "skills";
+// @import "home";
+// @import "projects";
+// @import "skills";
+
