--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@
 // @import "animations";
 // @import "footer";
 @import "header";
-// @import "home";
+@import "home";
 // @import "projects";
 // @import "skills";
 
