--- a/css/style.css
+++ b/css/style.css
@@ -27,13 +27,20 @@ html {
   z-index: 9; }
 
 .container > main {
-  grid-area: main;
-  display: grid;
-  grid-template-rows: repeat(2, 100vh) repeat(2, min-content);
-  grid-gap: 3rem; }
+  grid-area: main; }
 
 .container > .footer {
-  grid-area: footer; }
+  grid-area: footer;
+  background-color: #EDEDED; }
+  .container > .footer > p {
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: #EDEDED;
+    font-family: inherit; }
+
+footer {
+  padding-top: 6.2rem;
+  padding-left: 37.5%; }
 
 .container.dark-mode {
   background-color: black;
@@ -48,7 +55,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: min-content;
+  height: 7.5rem;
   width: 100%;
   background-color: #EDEDED;
   transition: background-color .4s ease-out; }
@@ -145,7 +152,7 @@ html {
 
 .navigation__icon {
   position: relative;
-  margin-top: 3.5rem;
+  margin-top: 6rem;
   margin-left: 3.5rem; }
   .navigation__icon, .navigation__icon::before, .navigation__icon::after {
     width: 3rem;
@@ -207,3 +214,51 @@ html {
   background-position: 100%;
   color: #202020;
   transform: translateX(1rem); }
+
+.home {
+  margin-top: -5rem;
+  height: 80vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+  .home__img {
+    margin-top: 7rem;
+    padding-top: 3rem;
+    width: 45%; }
+    .home__img > img {
+      width: 100%;
+      height: 75rem;
+      object-fit: cover;
+      margin-bottom: -0.5rem; }
+  .home__data {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-end; }
+  .home__data > .home__social {
+    display: grid;
+    grid-template-columns: 3.5rem repeat(2, min-content) 1fr;
+    grid-gap: 5rem; }
+    .home__data > .home__social img {
+      width: 8rem;
+      height: 3.5rem;
+      opacity: .7;
+      grid-column: 2 / 3; }
+    .home__data > .home__social img.linkedin-logo {
+      width: 3.5rem;
+      height: 3.5rem;
+      opacity: .7;
+      grid-column: 3 / 4;
+      -webkit-filter: invert(100%);
+      filter: invert(100%); }
+    .home__data > .home__social img:hover,
+    .home__data > .home__social img:active {
+      opacity: 1; }
+
+.dark-mode > main > .home > .home__data > .home__social > a > img {
+  -webkit-filter: invert(100%);
+  filter: invert(100%); }
+
+.dark-mode > main > .home > .home__data > .home__social > a > img.linkedin-logo {
+  -webkit-filter: invert(0%);
+  filter: invert(0%); }
