--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -64,15 +64,30 @@ html {
 .container > main {
     grid-area: main;
 
-    display: grid;
-    grid-template-rows: repeat(2, 100vh) repeat(2, min-content);
+    // display: grid;
+    // grid-template-rows: repeat(2, 100vh) repeat(2, min-content);
     
     // spacing between sections
-    grid-gap: 3rem;
+    // grid-gap: 3rem;
 }
 
 .container > .footer {
     grid-area: footer;
+
+    background-color: $color-primary-light;
+    
+    & > p {
+        font-size: 1.25rem;
+        font-weight: 500;
+        color: $color-primary-light;
+        font-family: inherit;
+    }
+}
+
+footer {
+    // text-align: center;
+    padding-top: 6.2rem;
+    padding-left: 37.5%;
 }
 
 // toggles bg-color and text-color of entire page
