--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -13,8 +13,8 @@
     }
 
     &__logo > img {
-        margin-top: -1rem;
         height: 5rem;
+        margin-top: 0.5rem;
     }
 
     & > .toggle-btn {
@@ -38,14 +38,23 @@
 }
 
 .navigation {
+    position: relative;
+
     &__checkbox {
         display: none;
     }
 
     &__button {
+        position: absolute;
+        // center menu icon in button
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        top: -2rem;
+        left: 3.5rem;
         background-color: transparent;
-        height: 7rem;
-        width: 7rem;
+        height: 3.5rem;
+        width: 3.5rem;
         border-radius: 50%;
         z-index: 2000;
 
@@ -53,24 +62,14 @@
         cursor: pointer;
     }
 
-    &__background {
-        height: 6rem;
-        width: 6rem;
-        border-radius: 50%;
-        z-index: 1000;
-
-        transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
-    }
-
     &__nav {
         height: 50vh;
         position: fixed;
-        top: 7rem;
-        left: 0;
         z-index: 1500;
 
-        width: 0;
-        opacity: 0;
+        background-color: transparent;
+
+        display: none;
 
         padding: 1rem;
         align-content: center;
@@ -129,20 +128,17 @@
     // FUNCTIONALITY
 
     &__checkbox:checked ~ &__background {
-        transform: scale(20);
+        transform: scale(1);
     }
 
     &__checkbox:checked ~ &__nav {
-        opacity: 1;
-        width: max-content;
+        display: block;
     }
 
     // ICON 
 
     &__icon {
-        position: relative;
-        margin-top: 6rem;
-        margin-left: 3.5rem;
+        position: absolute;
 
         &,
         &::before,
@@ -151,6 +147,8 @@
             height: 2px;
             background-color: $color-primary-dark;
             display: inline-block;
+
+            transition: all 0.2s;
         }
 
         &::before,
@@ -158,7 +156,7 @@
             content: "";
             position: absolute;
             left: 0;
-            transition: all 0.2s;
+            // transition: all 0.2s;
         }
 
         &::before { top: -0.8rem; }
@@ -174,9 +172,10 @@
         top: 1rem;
     }
 
-    &__checkbox:checked + &__button &__icon {
-        background-color: transparent;
-    }
+    // &__checkbox:checked + &__button &__icon {
+    //     background-color: transparent;
+
+    // }
 
     &__checkbox:checked + &__button &__icon::before {
         transform: rotate(135deg);
@@ -201,6 +200,19 @@
     // invert png so black becomes white, and vice versa
     -webkit-filter: invert(100%);
     filter: invert(100%);
+}
+
+.dark-mode > .header > .navigation > .navigation__button > .navigation__icon {
+    &,
+    &::before,
+    &::after {
+        background-color: $color-primary-light;
+    }
+}
+
+.navigation > .navigation__checkbox:checked + .navigation__button .navigation__icon {
+    background-color: transparent;
+        
 }
 
 .dark-mode > .header > .navigation > .navigation__nav > .navigation__list > .navigation__item {
